# canopy

./: .env.example  .gitignore  CLAUDE.md  README.md  SKILL.md  pyproject.toml
.github/workflows/: pages.yml
data/: README.md
data/evals/: calibration_labels.json  calibration_report.json  calibration_report_realpass_a.json  history.jsonl  judge_labels.jsonl  reviews_pass_a.jsonl
data/evals/traces/: cap_000.json  cap_001.json  cap_002.json  cap_003.json  cap_004.json  cap_005.json  cap_006.json  cap_007.json
docs/: 00-charter-and-index.md  01-domain-primer.md  02-architecture-and-data-model.md  03-tool-design-spec.md  04-mcp-server-spec.md  05-agent-orchestration-spec.md  06-structured-outputs-and-validation.md  07-eval-harness-and-hitl.md  08-raw-can-extension.md  09-ai-llm-flow.md  10-build-log.md  architecture-flow.mermaid
scripts/: ask.py  calibrate.py  capture.py  eval.py  review.py  review_context.py  serve.py  smoke_mcp.py
site/: build_data.py  data.js  index.html
src/canopy/: __init__.py
src/canopy/agent/: __init__.py  context.py  contracts.py  executor.py  graph.py  parsing.py  prompts.py  reference_loop.py  state.py  tool_schema.py
src/canopy/domain/: __init__.py  registry.py
src/canopy/evals/: __init__.py  assertions.py  cases.py  judge.py  review.py  runner.py  schemas.py  store.py  trace.py  tracking.py
src/canopy/mcp/: __init__.py  __main__.py  server.py
src/canopy/model/: __init__.py  findings.py  signals.py
src/canopy/readers/: __init__.py  base.py  factory.py  fixtures.py  synthetic.py
src/canopy/tools/: __init__.py  diagnose.py  errors.py  get_signal.py  list_signals.py  registry.py  summarize.py
tests/: conftest.py  test_agent_contracts.py  test_agent_graph.py  test_eval_assertions.py  test_eval_runner.py  test_eval_schemas.py  test_eval_trace.py  test_eval_tracking.py  test_judge_calibration.py  test_mcp_server.py  test_reader_factory.py  test_review_gate.py  test_rules.py  test_seam.py  test_signals.py  test_synthetic_reader.py  test_tool_schema.py  test_tools.py
(+2 files in other folders)
