[project]
name = "canopy"
version = "0.1.0"
description = "An MCP server exposing vehicle-diagnostic / CAN-bus domain logic as agent tools."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.6",
    "mcp>=1.0",
    "langgraph>=1.2.8",
    "langchain-core>=1.4.9",
    "langchain-anthropic>=1.4.8",
    "langchain-google-genai>=2.1.0",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/canopy"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-q"
filterwarnings = [
    # LangGraph's MemorySaver msgpack-serializes our pydantic state (ReviewState carries a
    # Trace and SignalSource) across the review-gate interrupt. It warns that deserializing
    # unregistered types will be blocked in a future release; it still round-trips today, and
    # the review gate persists only inside a single process. Filtered to keep output readable.
    "ignore:Deserializing unregistered type:UserWarning",
]
